--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+body {
   padding: 0;
   box-sizing: border-box;
   font-weight: 600;
@@ -8,6 +8,10 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: linear-gradient(120deg, #2980b9, #8e44ad);
+  height: 100vh;
+  overflow: scroll;
 }
 
 code {
@@ -16,22 +20,15 @@ code {
 }
 
 .App {
+  background: white;
   max-width: 600px;
   width: 100%;
   min-width: 400px;
   max-height: 850px;
   box-shadow: 0 2px 6px #555;
   margin: 50px auto;
-  padding: 50px;
+  padding: 50px 60px 50px 20px;
   overflow: auto;
-}
-
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 900;
-  color: #666;
 }
 
 h2 {
@@ -48,31 +45,34 @@ h3 {
   font-weight: 600;
   color: rgb(3, 172, 3);
 }
-form {
+.form {
   width: 100%;
   height: 40px;
   margin: 20px 0;
   display: flex;
 }
-form input,
-form button {
-  flex: 3;
+.form_input {
+  flex: 4;
   border: none;
   outline: none;
   border-bottom: 1px solid #555;
-  margin: 0 5px;
+  margin: 0 50px;
 }
-form button {
+.button_create {
   flex: 1;
-  background: #555;
+  background: rgb(121, 118, 118);
   color: white;
   letter-spacing: 2px;
   cursor: pointer;
+  border: none;
 }
-ul li {
+.list {
+  margin-top: 25px;
+}
+.ul_li {
   list-style: none;
   border: 1px solid #ccc;
-  margin: 10px 0;
+  margin: 10px 0 0 0;
   padding: 10px;
   display: flex;
 
@@ -96,21 +96,19 @@ ul li button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
-/* .row #save {
-  background: green;
-} */
 
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+  margin-left: 45px;
 }
 .row #delete {
   border: none;
   outline: none;
   color: white;
-  /* background: orange; */
+
   padding: 5px 15px;
   cursor: pointer;
   background: crimson;
