--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@
   margin: 0 20px 12px;
 }
 .btn_image_edit_n {
-  height: 20px;
-  width: 20px;
+  height: 22px;
+  width: 22px;
 }
 
 .btn_image_save_n {
@@ -133,14 +133,24 @@
   border: none;
   outline: none;
   color: rgb(0, 0, 0);
-  background: rgb(255, 255, 255);
-  margin-right: 10px;
+  background: white;
+  margin-right: 5px;
   cursor: pointer;
-  opacity: 100%;
+  opacity: 1;
+  border: none;
+  outline: none;
+  background: white;
+  cursor: pointer;
 }
 .btn_image {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
+}
+.btn_image1 {
+  width: 20px;
+  height: 20px;
+  rotate: 180deg;
+  transition: 0.5s;
 }
 
 .todo_input {
